[tool.poetry]
name = "meep"
version = "0.1.0"
description = "Tweet organizer"
authors = ["Gökmen Görgen <gkmngrgn@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"
SQLAlchemy = "^1.4.43"

[tool.poetry.scripts]
meep = "meep.cli:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
