[tool.poetry]
name = "meep"
version = "0.1.0"
description = "Tweet organizer"
authors = ["Gökmen Görgen <gkmngrgn@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"
SQLAlchemy = "^1.4.43"
appdirs = "^1.4.4"
python-dateutil = "^2.8.2"

[tool.poetry.scripts]
meep = "meep.cli:run"

[tool.poetry.group.dev.dependencies]
pylint = "^2.15.5"

[tool.mypy]
python_version = "3.9"
plugins = ["sqlalchemy.ext.mypy.plugin"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
